--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <title>Elm App</title>
+    <title>Argdown Viewer</title>
   </head>
   <body>
     <noscript> You need to enable JavaScript to run this app. </noscript>
