Render Argdown WebComponent on page load

--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,9 @@
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="stylesheet" type="text/css" href="%PUBLIC_URL%/argdown.css" />
+    <link rel="stylesheet" type="text/css" href="%PUBLIC_URL%/argdown-map.css" />
+    <script src="%PUBLIC_URL%/argdown-map.js"></script>
     <title>Argdown Viewer</title>
   </head>
   <body>
