--- a/public/index.html
+++ b/public/index.html
@@ -6,8 +6,11 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta name="theme-color" content="#000000" />
+
+    <!-- App setup -->
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <title>Argdown Viewer</title>
+    <link rel="stylesheet" type="text/css" href="%PUBLIC_URL%/custom.css" />
 
     <!--
       manifest.json provides metadata used when your web app is added to the
