Restructure resources directories

--- a/public/index.html
+++ b/public/index.html
@@ -8,8 +8,8 @@
     <meta name="theme-color" content="#000000" />
 
     <!-- App setup -->
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <link rel="stylesheet" type="text/css" href="%PUBLIC_URL%/custom.css" />
+    <link rel="icon" href="%PUBLIC_URL%/assets/favicon.ico" />
+    <!-- <link rel="stylesheet" type="text/css" href="%PUBLIC_URL%/assets/argvu-font.css" /> -->
 
     <!--
       manifest.json provides metadata used when your web app is added to the
@@ -18,9 +18,15 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
     <!-- Argdown imports -->
-    <link rel="stylesheet" type="text/css" href="%PUBLIC_URL%/argdown.css" />
-    <link rel="stylesheet" type="text/css" href="%PUBLIC_URL%/argdown-map.css" />
-    <script src="%PUBLIC_URL%/argdown-map.js"></script>
+    <style>
+      @font-face {
+        font-family: 'ArgVu Sans Mono Regular';
+        src: url(%PUBLIC_URL%/assets/ArgVuSansMono-Regular-8.2.otf) format('opentype');
+      }
+    </style>
+    <!-- <link rel="stylesheet" type="text/css" href="%PUBLIC_URL%/assets/argdown.css" />
+    <link rel="stylesheet" type="text/css" href="%PUBLIC_URL%/assets/argdown-map.css" />
+    <script src="%PUBLIC_URL%/assets/argdown-map.js"></script> -->
 
     <!-- Bootstrap imports -->
     <link
